--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.ts",
-    "build": "node ./src/index.ts"
+    "start": "tsc -p .",
+    "build": "node ./dist/js/index.js"
   },
   "keywords": [],
   "author": "",
